src/objects/Feature_Rating__c.object
<CustomObject>
    <description>Child object for Feature. Used so that we can copy comments directly after rating as well as ensure that all raters are rating if they are proceeding with the process.</description>
    <fields>
        <fullName>Affected_Customers__c</fullName>
        <description>comma or semicolon delimited string for customers aggregation based on US and DE</description>
        <inlineHelpText>Customers that have issues/enhancements requests related to the Feature</inlineHelpText>
        <label>Affected Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>Feature Ratings (Capability)</relationshipLabel>
        <relationshipName>Feature_Rating_Capability</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <formula>TEXT(Feature__r.Confidence__c)</formula>
        <inlineHelpText>TEC Confidence level of delivering Feature by release date</inlineHelpText>
        <label>Confidence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_To_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in final approval to copy back comments and ratings to parent feature</description>
        <label>Copy To Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>Feature__r.Days__c</formula>
        <inlineHelpText>Current Engineering Days Estimate</inlineHelpText>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <formula>Feature__r.Percentage_Done__c</formula>
        <inlineHelpText>Percentage of work completed on the Feature</inlineHelpText>
        <label>Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_ID_and_Name__c</fullName>
        <formula>Feature__r.Feature_ID_and_Name__c</formula>
        <label>Feature ID and Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Id__c</fullName>
        <formula>Feature__r.Feature_Id__c</formula>
        <inlineHelpText>For additional and updated data, enable the Feature TEC Hypercard</inlineHelpText>
        <label>Feature Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Feature__c, Feature__r.Full_Name__c)</formula>
        <label>Feature Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feature_Rating_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <description>Parent Feature</description>
        <label>Feature</label>
        <referenceTo>Feature__c</referenceTo>
        <relationshipLabel>Feature Ratings</relationshipLabel>
        <relationshipName>Feature_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InvestmentCategory__c</fullName>
        <formula>Feature__r.InvestmentCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent_Rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to prevent rejection in approval process</description>
        <label>Prevent Rejection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>Feature Ratings</relationshipLabel>
        <relationshipName>Feature_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rater__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up used in approval process for who should be the approver</description>
        <label>Rater</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feature_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resubmission_Comments__c</fullName>
        <label>Resubmission Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Copied from current feature stage to determine next rating</description>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Feature__r.State__c)</formula>
        <inlineHelpText>Descriptions of TEC States:
Backlog - Still in planning;
Development - Actively implementing;
Ready for Validation - Initial development completed;
Validated - Feature meets all acceptance criteria</inlineHelpText>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <formula>Feature__r.Release_Date__c</formula>
        <inlineHelpText>Estimated calendar date of release</inlineHelpText>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Release__c</fullName>
        <formula>Feature__r.Release__c</formula>
        <inlineHelpText>Estimated TEC Release Cycle</inlineHelpText>
        <label>Target Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Feature__r.Lead_Team__c</formula>
        <inlineHelpText>Primary TEC team delivering feature work</inlineHelpText>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tempo__c</fullName>
        <inlineHelpText>Representative Department&apos;s point of view on time frame of delivery</inlineHelpText>
        <label>Tempo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Feature_Tempo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Representative Department&apos;s point of view on impact of delivery</inlineHelpText>
        <label>Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Feature_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>is_Rated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to fire trigger validation on if user has inputted tempo and value prior to approval</description>
        <label>is Rated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Feature Rating</label>
    <nameField>
        <label>Feature Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>